@@ -55,6 +55,10 @@
       \item The new field \samp{SysDataCompression} in the
       \file{DESCRIPTION} file allows user control over the compression
       used for \file{sysdata.rda} objects in the lazy-load database.
+      
+      \item \code{install.packages(dependencies = value)} for \code{value =
+	NA} (the default) or \code{value = TRUE} omits packages only in
+      \code{LinkingTo} for binary package installs.
     }
   }
 
